--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h2 class="main-title">SHOW Marketing</h2>
         <div class="content">
           <div class="image">
-            <img src="img1.jpg" alt="">
+            <img src="new1.jpg" alt="">
           </div>
           <div class="text-box">
            <!-- <h3>Lorem Ipsum</h3> -->
@@ -39,7 +39,7 @@
         <h3 class="section-title">Our Focus is YOU</h3>
         <div class="content">
           <div class="image">
-            <img src="img2.jpg" alt="">
+            <img src="new2.jpg" alt="">
           </div>
           <div class="info">
             <h4 class="info-title"></h4>
