--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h2 class="main-title">SHOW Marketing</h2>
         <div class="content">
           <div class="image">
-            <img src="new1.jpg" alt="">
+            <img src="meet.jpg" alt="">
           </div>
           <div class="text-box">
            <!-- <h3>Lorem Ipsum</h3> -->
