--- a/services.html
+++ b/services.html
@@ -40,7 +40,7 @@
         <div class="swiper-slide">
           <img src="pic1.jpg" alt="">
           <div class="text-content">
-            <h2 class="title"> Website, Social Media & Marketing <span>SHOW</span></h2>
+            <h2 class="title"> Website, SM & Marketing <span>SHOW</span></h2>
             <p>
               We specialise packages based on YOU! SHOW wants to help build your Website, social media & market your business.
               <br>
